# ABSHER

.cursor/plans/: auto-0aa113db.plan.md
.hypothesis/constants/: 371445a75277f4aa  b6fc28b1d7d096af
ABSHER/: ABSHERApp.swift  ContentView.swift
ABSHER.xcodeproj/: project.pbxproj
ABSHER/Components/: BottomTabBar.swift  DigitalDocumentsSection.swift  LicenseHeaderCard.swift  (+5 more)
ABSHERTests/: ABSHERTests.swift  AbsherChatViewTests.swift  AppIntegrationPropertyTests.swift  AppViewModelPropertyTests.swift  ChatMessagePropertyTests.swift  ChatViewModelPropertyTests.swift  ConfirmationPropertyTests.swift  DependentPropertyTests.swift  DependentsViewPropertyTests.swift  FlowConsistencyPropertyTests.swift  HomeViewPropertyTests.swift  MLXServicePropertyTests.swift  ProactiveAlertPropertyTests.swift  ServiceDetailsPropertyTests.swift  SuggestionChipPropertyTests.swift  TransitionPropertyTests.swift
ABSHERUITests/: ABSHERUITests.swift  ABSHERUITestsLaunchTests.swift
server/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/api/: __init__.py  main.py  models.py
server/guardrails/: __init__.py
server/models/: __init__.py  triton_client.py
server/models/triton_model_repository/allam_tensorrt/: config.pbtxt
server/models/triton_model_repository/ensemble/: config.pbtxt
server/models/triton_model_repository/postprocessing/: config.pbtxt
server/models/triton_model_repository/preprocessing/: config.pbtxt
server/scripts/: __init__.py  convert_allam.py
server/tests/: __init__.py  test_api_properties.py  test_streaming_properties.py
(+55 files in other folders)
